<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="90dp"
        android:text="@string/register"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fullname"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/enter_fullname"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textWelcome" />

    <EditText
        android:id="@+id/email_login"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:autofillHints="email"
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fullname" />

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/enter_phone"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_login" />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_number" />

    <EditText
        android:id="@+id/repeat_password"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_login" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="60dp"
        android:onClick="onClickRegister"
        android:text="@string/register_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/repeat_password" />

    <Button
        android:id="@+id/buttonGoToNextActivity"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:onClick="goToPreviousActivity"
        android:text="@string/lt"
        android:textColor="#1B1B1B"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
