<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/google_maps"
        android:textSize="26sp"
        app:layout_constraintStart_toEndOf="@+id/buttonGoToNextActivity"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="412dp"
        android:layout_height="650dp"
        android:layout_marginTop="84dp"
        android:layout_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/this_is_a_map"/>

    <Button
        android:id="@+id/buttonGoToNextActivity"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="67dp"
        android:layout_height="60dp"
        android:onClick="goToPreviousActivity"
        android:padding="0dp"
        android:text="@string/lt"
        android:textColor="#1B1B1B"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="324dp"
        android:layout_height="54dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="636dp"
        android:onClick="savePosition"
        android:text="@string/apply_this_localisation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
